...
                const PokemonHomeHeader(),
                const SizedBox(height: 16),
                Consumer<PokemonController>(
                  builder: (context, controller, child) {
                    return PokemonSearchBar(
                      controller.onChange,
                      key: const Key('pokemon_search_field'),
                    );
                  },
                ),
                const SizedBox(height: 16),
                Consumer<PokemonController>(
                  builder: (context, controller, child) {
...
